--- a/2 - Desenvolvimento Web Front End - Essencial/Lista de exercicios 3/feedback/feedback.html
+++ b/2 - Desenvolvimento Web Front End - Essencial/Lista de exercicios 3/feedback/feedback.html
@@ -3,32 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../assets/css/common/header.css">
+        <link rel="stylesheet" href="../assets/css/feedback.css">
+        <link rel="stylesheet" href="../assets/css/common/footer.css">
     <title>Formulário de Feedback</title>
 </head>
-<body class="feedback-container">
-    <header class="container header-background-container">
-        <nav class="header-container">
-            <div class="header-logo-name">
-                <img class="logo" src="assets/logo-shooting-stars.png" alt="Logo">
-                <h2 class="title-general">
-                    P&V
-                </h2>
-            </div>    
-            <ul>
-                <li class=" class="title-general"">
-                    <a href="">Link 1</a>
+<body>
+    <header class="header-container">
+        <nav class="nav-container container">
+            <div class="nav-logo-container">
+                <div class="logo-img-container">
+                    <img src="../assets/img/logo-shooting-stars.png" alt="Logo da Shooting Stars">
+                </div>
+                <span class="logo-name-nav">
+                    LOREM <br> IPSUM
+                </span>
+            </div>
+
+            <input type="checkbox" id="nav-menu-control" class="nav-menu-control-style">
+
+            <ul class="nav-menu">
+                <li class="nav-menu-item">
+                    <a href="../index.html">Home</a>
                 </li>
-                <li class=" class="title-general"">
-                    <a href="">Link 2</a>
+                <li class="nav-menu-item">
+                    <a href="#">Feedback</a>
                 </li>
-                <li class=" class="title-general"">
-                    <a href="">Link 3</a>
+                <li class="nav-menu-item">
+                    <a href="../galeria/galeria.html">Galeria</a>
+                </li>
+                <li class="nav-menu-item">
+                    <a href="../listas/listas.html">Listas</a>
                 </li>
             </ul>
+
+            <label for="nav-menu-control" class="hamburguer-icon">
+                <div class="nav-hamburger-menu-buttom">
+                    <img src="../assets/img/menu-hamburger-icon.png" alt="Ícone do menu Hambúrguer">
+                </div>
+            </label>
         </nav>
     </header>
-    <main class="container">
+    <main class="main-container">
         <form action="" class="form-container">
             <label for="name">Nome
                 <input type="text" id="name" placeholder="Ex.: Bruno Henrique....." required>
@@ -80,12 +96,12 @@
             <button type="submit">Enviar</button>
         </form>
     </main>
-    <footer class="container footer-background-container">
-        <div class="footer-container">
-            <h2 class="title-general">
-                P&V
-            </h2>
-            <p>&copy;opyright 2025 - P&V. Todos os direitos reservados</p>
+    <footer class="footer-container">
+        <div class="container footer-elements">
+            <span class="logo-name-footer">
+                LOREM <br> IPSUM
+            </span>
+            <p class="copyright-text-footer">&copy;opyright 2025 - LOREM IPSUM. Todos os direitos reservados</p>
         </div>
     </footer>
 </body>
