--- a/2 - Desenvolvimento Web Front End - Essencial/Lista de exercicios 3/listas/listas.html
+++ b/2 - Desenvolvimento Web Front End - Essencial/Lista de exercicios 3/listas/listas.html
@@ -3,50 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../assets/css/common/header.css">
+    <link rel="stylesheet" href="../assets/css/listas.css">
+    <link rel="stylesheet" href="../assets/css/common/footer.css">
     <title>Listas e navegação</title>
 </head>
 <body>
-    <header class="container header-background-container">
-        <nav class="header-container">
-            <div class="header-logo-name">
-                <div>
-                    <img class="logo" src="assets/logo-shooting-stars.png" alt="Logo">
-                    <h2 class="title-general">
-                        P&V
-                    </h2>
+    <header class="header-container">
+        <nav class="nav-container container">
+            <div class="nav-logo-container">
+                <div class="logo-img-container">
+                    <img src="../assets/img/logo-shooting-stars.png" alt="Logo da Shooting Stars">
                 </div>
-            </div>    
-            <ul>
-                <li class=" class="title-general"">
-                    <a href="">Link 1</a>
+                <span class="logo-name-nav">
+                    LOREM <br> IPSUM
+                </span>
+            </div>
+
+            <input type="checkbox" id="nav-menu-control" class="nav-menu-control-style">
+
+            <ul class="nav-menu">
+                <li class="nav-menu-item">
+                    <a href="../index.html">Home</a>
                 </li>
-                <li class=" class="title-general"">
-                    <a href="">Link 2</a>
+                <li class="nav-menu-item">
+                    <a href="../feedback/feedback.html">Feedback</a>
                 </li>
-                <li class=" class="title-general"">
-                    <a href="">Link 3</a>
+                <li class="nav-menu-item">
+                    <a href="../galeria/galeria.html">Galeria</a>
+                </li>
+                <li class="nav-menu-item">
+                    <a href="#">Listas</a>
                 </li>
             </ul>
+
+            <label for="nav-menu-control" class="hamburguer-icon">
+                <div class="nav-hamburger-menu-buttom">
+                    <img src="../assets/img/menu-hamburger-icon.png" alt="Ícone do menu Hambúrguer">
+                </div>
+            </label>
         </nav>
     </header>
-    <main class="container lists-background">
-        <div class="main-container section-list-container">
+
+    <main class="main-container lists-background">
+        <div class="section-list-container container ">
             <section class="section-container list-container">
                 <h1>Meus hobbies</h1>
                 <ul>
                     <li>
                         Assistir boas animações (Bleach, Invincible, Jujutsu no Kaisen, X-Men '97, Kimetsu no Yaiba).
                     </li>
-                    <li>Jogar meus jogos favoritos (quase sempre os mesmos rsrsrs).</li>
+                    <li>
+			            Jogar meus jogos favoritos (quase sempre os mesmos rsrsrs).
+		            </li>
                     <li>
                         Ver o que está rolando no youtube (me informar com base nos canais em que sou inscrito).
                     </li>
                     <li>
-                        Dialogar com amigos e familiares (saber como estão as coisas, jogar conversa fora)
+                        Dialogar com amigos e familiares (saber como estão as coisas, jogar conversa fora).
                     </li>
                     <li>
-                        Ouvir músicas, ver video clipes, ver apresentações ao vivo
+                        Ouvir músicas, ver video clipes, ver apresentações ao vivo.
                     </li>
                 </ul>
             </section>
@@ -77,12 +94,13 @@
             </section>
         </div>
     </main>
-    <footer class="container footer-background-container">
-        <div class="footer-container">
-            <h2 class="title-general">
-                P&V
-            </h2>
-            <p>&copy;opyright 2025 - P&V. Todos os direitos reservados</p>
+
+    <footer class="footer-container">
+        <div class="container footer-elements">
+            <span class="logo-name-footer">
+                LOREM <br> IPSUM
+            </span>
+            <p class="copyright-text-footer">&copy;opyright 2025 - LOREM IPSUM. Todos os direitos reservados</p>
         </div>
     </footer>
 </body>
